@@ -1,3 +1,4 @@
+3/20/12 control for showing standard lines
 3/20/12 control for chosing form of slope-intercept equation
 3/20/12 control for saving and erasing lines
 3/20/12 English strings for Intro tab
